--- a/index.html
+++ b/index.html
@@ -10,122 +10,152 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+
+<body style="color: #2a1e7a">
+    <div class="background__header">
+    </div>
+    <div class="background__body">
+
+    </div>
     <div class="container-fluid">
         <div class="card form-insert">
-            <div style="background-color: white" class="card-header">
-                xxx
+            <div class="card-header">
+                <h2>XXX</h2>
             </div>
             <div class="card-body">
                 <form>
                     <div class="form-group">
                         <div class="row">
                             <div class="col-md-4 col__left">
-                                <div class="row  row__one">
-                                    <label class="col-md-1 input" for="birthday">xx:</label>
-                                    <input class="col-md-4 input" type="date">
+                                <div class="row">
+                                    <label class="col-md-1">xx:</label>
+                                    <input class="col-md-4 input-ghosting" type="date">
                                     <p>~</p>
-                                    <input class="col-md-4 input" type="date">
+                                    <input class="col-md-4 input-ghosting" type="date">
                                 </div>
-                                <div class="row  row__two">
+                                <div class="row">
                                     <label class="col-md-1">xx:</label>
-                                    <select class="col-md-2 input">
-                                    </select>
+                                    <input class="col-md-2 input-value">
+                                    <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    </button>
+
                                 </div>
-                                <div class="row  row__three">
+                                <div class="row">
                                     <label class="col-md-1">xx:</label>
-                                    <select class="col-md-2 input">
-                                    </select>
+                                    <input class="col-md-2 input-value">
+                                    <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    </button>
                                 </div>
-                                <div class="row  row__four">
+                                <div class="row">
                                     <label class="col-md-1">xx:</label>
-                                    <select class="col-md-3 input">
-                                    </select>
+                                    <input class="col-md-3 input-value">
+                                    <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    </button>
                                 </div>
                             </div>
                             <div class="col-md-5 col__mid">
-                                <div class="row  row__one">
+                                <div class="row">
                                     <label class="col-md-1">xx:</label>
-                                    <select class="col-md-2 input">
-                                    </select>
+                                    <input class="col-md-2 input-value">
+                                    <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    </button>
                                     <p class="col-md-2"></p>
                                     <p class="col-md-1">xx:</p>
-                                    <select class="col-md-1 input">
-                                    </select>
+                                    <input class="col-md-1 input-value">
+                                    <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    </button>
                                 </div>
-                                <div class="row  row__two">
+                                <div class="row">
                                     <label class="col-md-1">xx:</label>
-                                    <select class="col-md-2 input">
-                                    </select>
+                                    <input class="col-md-2 input-value">
+                                    <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    </button>
                                 </div>
-                                <div class="row  row__three">
+                                <div class="row">
                                     <label class="col-md-1">xx:</label>
-                                    <select class="col-md-2 input">
-                                    </select>
+                                    <input class="col-md-2 input-value">
+                                    <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    </button>
                                 </div>
-                                <div class="row  row__four">
+                                <div class="row">
                                     <label class="col-md-1">xx:</label>
-                                    <input class="col-md-4 input" type="input">
+                                    <input class="col-md-3 input-ghosting" type="input">
                                     <p class="col-md-1">xx</p>
-                                    <input class="col-md-4 input" type="input">
+                                    <input class="col-md-3 input-ghosting" type="input">
                                 </div>
                             </div>
-                            <div class="col-md-3 col__right">
-                                <div class="row  row__one">
+                            <div class="col-md-3 col__mid">
+                                <div class="row">
                                     <label class="col-md-2 input">xxx:</label>
-                                    <input class="col-md-4 input" type="input">
+                                    <input class="col-md-6 input-ghosting">
                                 </div>
-                                <div class="row  row__two">
-                                    <label class="col-md-2 input">xxx:</label>
-                                    <input class="col-md-4 input" type="input">
+                                <div class="row">
+                                    <label class="col-md-2">xxx:</label>
+                                    <input class="col-md-6 input-ghosting">
                                 </div>
-                                <div class="row  row__three">
-                                    <label class="col-md-2 input">xxx:</label>
-                                    <select class="col-md-2 input">
-                                    </select>
+                                <div class="row">
+                                    <label class="col-md-2">xxx:</label>
+                                    <input class="col-md-2 input-value">
+                                    <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    </button>
                                 </div>
                             </div>
                         </div>
                     </div>
-    
                 </form>
             </div>
-            <div style="background-color: white"class="card-footer text-muted">
+            <div class="card-footer text-muted">
             </div>
-          </div>
-          <div class="card form-select">
-            <div style="background-color: white;" class="card-header">
-                <div class="col-md-4 col__mid">
-                    <div class="row  row__one">
-                        <label class="col-md-2">xxx:</label>
-                        <input class="col-md-4 input">
+        </div>
+        <div class="card form-select">
+            <div class="card-header">
+                <div class="col-md-4">
+                    <div class="row">
+                        <label class="col-md-2">xxx</label>
+                        <label class="col-md-2">xxx</label>
+                        <input class="col-md-2 form-select__input">
                         <p class="col-md-2"></p>
                         <p class="col-md-2">xxx</p>
-                        <select class="col-md-2 input">
+                        <select class="col-md-2 form-select__select">
                         </select>
                     </div>
-            </div>
-            <div class="card-body_two">
-                <table class="table">
-                    <thead>
-                      <tr class="table-primary">
-                        <th scope="col">xx</th>
-                        <th scope="col">xx</th>
-                        <th scope="col">xx</th>
-                        <th scope="col">xx</th>
-                        <th scope="col">xx</th>
-                        <th scope="col">xx</th>
-                        <th scope="col">xx</th>
-                        <th scope="col">xx</th>
-                      </tr>
-                    </thead>
-                  </table>
-            </div>
+                </div>
+                <div class="card-body_two">
+                    <table class="table">
+                        <thead>
+                            <tr class="table-primary">
+                                <th scope="col">No</th>
+                                <th scope="col">xx</th>
+                                <th scope="col">xx</th>
+                                <th scope="col">xx</th>
+                                <th scope="col">xx</th>
+                                <th scope="col">xx</th>
+                                <th scope="col">xx</th>
+                                <th scope="col">xx</th>
+                                <th scope="col">xx</th>
+                                <th scope="col">xx</th>
+                                <th scope="col">xx</th>
+                                <th scope="col">xx</th>
+                                <th scope="col">xx</th>
+                                <th scope="col">xx</th>
+                                <th scope="col">xx</th>
+                                <th scope="col">xx</th>
+                                <th scope="col">xx</th>
+                                <th scope="col">xx</th>
+                            </tr>
+                        </thead>
+                        <tr>
+                            <td>xx</td>
+                        </tr>
+                    </table>
+                </div>
 
+            </div>
         </div>
-    </div>
     </div>
 
 </body>
+
 </html>
