--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
     </div>
     <div class="container-fluid">
+        <!-- start Card form insert -->
         <div class="card form-insert">
-            <div class="card-header">
-                <h2>XXX</h2>
+            <div  style="border: 2px;" class="card-header bg-white">
+                <h5>XXXX</h5>
             </div>
             <div class="card-body">
                 <form>
@@ -30,130 +31,136 @@
                         <div class="row">
                             <div class="col-md-4 col__left">
                                 <div class="row">
-                                    <label class="col-md-1">xx:</label>
-                                    <input class="col-md-4 input-ghosting" type="date">
+                                    <label style="margin-left: 15px;">xxxx</label>
+                                    <input style="width:25%;" class="input-ghosting ml-3" type="date">
                                     <p>~</p>
-                                    <input class="col-md-4 input-ghosting" type="date">
+                                    <input style="width:25%;" class=" input-ghosting" type="date">
                                 </div>
                                 <div class="row">
-                                    <label class="col-md-1">xx:</label>
-                                    <input class="col-md-2 input-value">
+                                    <label class="ml-3">xx</label>
+                                    <input style="margin-left: 30px;" class="col-md-2 input-value">
                                     <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
                                     </button>
-
+                                    <input  class="input-textbox input-ghosting">
                                 </div>
-                                <div class="row">
-                                    <label class="col-md-1">xx:</label>
-                                    <input class="col-md-2 input-value">
+                                <div class="row mt-1">
+                                    <label class="ml-3">xx</label>
+                                    <input style="margin-left: 30px;" class="col-md-2 input-value ">
                                     <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
                                     </button>
+                                    <input class="input-textbox input-ghosting">
                                 </div>
-                                <div class="row">
-                                    <label class="col-md-1">xx:</label>
-                                    <input class="col-md-3 input-value">
+                                <div class="row mt-1">
+                                    <label class="ml-3">xxx</label>
+                                    <input style="margin-left: 22px;" class="col-md-3 input-value">
                                     <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
                                     </button>
+                                    <input style="width: 30%;" class="input-textbox input-ghosting">
                                 </div>
                             </div>
-                            <div class="col-md-5 col__mid">
+                            <div class="col-md-4 col__mid">
                                 <div class="row">
-                                    <label class="col-md-1">xx:</label>
-                                    <input class="col-md-2 input-value">
+                                    <label class="ml-2">xxxx</label>
+                                    <input style="margin-left: 15px;" class="col-md-2 input-value">
                                     <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
                                     </button>
-                                    <p class="col-md-2"></p>
-                                    <p class="col-md-1">xx:</p>
-                                    <input class="col-md-1 input-value">
-                                    <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
-                                    </button>
-                                </div>
-                                <div class="row">
-                                    <label class="col-md-1">xx:</label>
-                                    <input class="col-md-2 input-value">
+                                    <input style="width: 15%;" class="input-textbox input-ghosting" type="input">
+                                    <p class="ml-3">xxxx</p>
+                                    <input class="col-md-1 input-value ml-3">
                                     <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
                                     </button>
                                 </div>
                                 <div class="row">
-                                    <label class="col-md-1">xx:</label>
-                                    <input class="col-md-2 input-value">
+                                    <label class="ml-2">xx</label>
+                                    <input style="margin-left: 31px;" class="col-md-2 input-value input-ghosting">
                                     <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
                                     </button>
+                                    <input style="width: 230px" class="input-textbox input-ghosting" type="input">
                                 </div>
-                                <div class="row">
-                                    <label class="col-md-1">xx:</label>
-                                    <input class="col-md-3 input-ghosting" type="input">
-                                    <p class="col-md-1">xx</p>
-                                    <input class="col-md-3 input-ghosting" type="input">
+                                <div class="row mt-1">
+                                    <label class="ml-2">xx</label>
+                                    <input style="margin-left: 30px;" class="col-md-2 input-value">
+                                    <button class="button button2"><i class="fa fa-caret-down input-ghosting" aria-hidden="true"></i>
+                                    </button>
+                                    <input style="width: 230px" class="input-textbox input-ghosting" type="input">
+                                </div>
+                                <div class="row mt-1">
+                                    <label class="ml-2">xxx</label>
+                                    <input style="margin-left: 22px;" class="col-md-3 input-ghosting" type="input">
+                                    <p class="ml-4">xxxxx</p>
+                                    <input style="margin-left: 30px;" class="col-md-3 input-ghosting" type="input">
                                 </div>
                             </div>
-                            <div class="col-md-3 col__mid">
+                            <div class="col-md-4 col__right ">
                                 <div class="row">
-                                    <label class="col-md-2 input">xxx:</label>
-                                    <input class="col-md-6 input-ghosting">
+                                    <label class="input ml-3">xxx</label>
+                                    <input style="margin-left: 20px;" class="col-md-6 input-ghosting">
                                 </div>
-                                <div class="row">
-                                    <label class="col-md-2">xxx:</label>
-                                    <input class="col-md-6 input-ghosting">
+                                <div class="row mt-2">
+                                    <label class="ml-3">xxx:</label>
+                                    <input style="margin-left: 17px;" class="col-md-6 input-ghosting">
                                 </div>
-                                <div class="row">
-                                    <label class="col-md-2">xxx:</label>
-                                    <input class="col-md-2 input-value">
+                                <div class="row mt-2">
+                                    <label class="ml-3">xxx</label>
+                                    <input style="margin-left: 22px;" class="col-md-2 input-value">
                                     <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
                                     </button>
+                                    <input style="width: 200px" class="input-textbox input-ghosting" type="input">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </form>
             </div>
-            <div class="card-footer text-muted">
+            <div style="border: 1px" class="card-footer text-muted bg-white">
             </div>
         </div>
+        <!--end card form insert  -->
+        <!-- start form select -->
         <div class="card form-select">
-            <div class="card-header">
+            <div style="border: 2px;" class="card-header bg-white">
                 <div class="col-md-4">
                     <div class="row">
-                        <label class="col-md-2">xxx</label>
-                        <label class="col-md-2">xxx</label>
-                        <input class="col-md-2 form-select__input">
-                        <p class="col-md-2"></p>
-                        <p class="col-md-2">xxx</p>
-                        <select class="col-md-2 form-select__select">
+                        <label>-x</label>
+                        <label class="ml-5">xxx</label>
+                        <input style="margin-left: 20px;" class="col-md-2 form-select__input">
+                        <p class="ml-5">xxx</p>
+                        <select class="col-md-2 form-select__select ml-3">
                         </select>
                     </div>
                 </div>
-                <div class="card-body_two">
-                    <table class="table">
-                        <thead>
-                            <tr class="table-primary">
-                                <th scope="col">No</th>
-                                <th scope="col">xx</th>
-                                <th scope="col">xx</th>
-                                <th scope="col">xx</th>
-                                <th scope="col">xx</th>
-                                <th scope="col">xx</th>
-                                <th scope="col">xx</th>
-                                <th scope="col">xx</th>
-                                <th scope="col">xx</th>
-                                <th scope="col">xx</th>
-                                <th scope="col">xx</th>
-                                <th scope="col">xx</th>
-                                <th scope="col">xx</th>
-                                <th scope="col">xx</th>
-                                <th scope="col">xx</th>
-                                <th scope="col">xx</th>
-                                <th scope="col">xx</th>
-                                <th scope="col">xx</th>
-                            </tr>
-                        </thead>
-                        <tr>
-                            <td>xx</td>
+            </div>
+            <div class="card-body_two">
+                <table style=" color: #2a1e7a" class="table">
+                    <thead>
+                        <tr class="table-primary">
+                            <th scope="col">No</th>
+                            <th scope="col">xxxx</th>
+                            <th scope="col">xxxxxx</th>
+                            <th scope="col">xxxxxx</th>
+                            <th scope="col">xxxx</th>
+                            <th scope="col">xxxx</th>
+                            <th scope="col">xxxx</th>
+                            <th scope="col">xxxx</th>
+                            <th scope="col">xxxxx</th>
+                            <th scope="col">xxxxx</th>
+                            <th scope="col">xxxx</th>
+                            <th scope="col">xxxxx</th>
+                            <th scope="col">xxxx</th>
+                            <th scope="col">xxxx</th>
+                            <th scope="col">xxxxx</th>
+                            <th scope="col">xx</th>
+                            <th scope="col">xxxxx</th>
+                            <th scope="col">xxxxx</th>
                         </tr>
-                    </table>
-                </div>
-
+                    </thead>
+                    <tr>
+                        <td>xx</td>
+                    </tr>
+                </table>
             </div>
         </div>
+        <!-- end form select -->
     </div>
 
 </body>
