--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 </div>
                                 <div class="row">
                                     <label class="ml-2">xx</label>
-                                    <input style="margin-left: 31px;" class="col-md-2 input-value input-ghosting">
+                                    <input style="margin-left: 31px;" class="col-md-2 input-value">
                                     <button class="button button2"><i class="fa fa-caret-down" aria-hidden="true"></i>
                                     </button>
                                     <input style="width: 230px" class="input-textbox input-ghosting" type="input">
